added player life's

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 				</div>
 			</div>
 		</div>
+		<div class="life">
+			<div class="life__container">
+				<div class="life__row">
+					<span class="life__count" data-life>0</span>
+					<img src="img/life.png" alt="life count">
+				</div>
+			</div>
+		</div>
 		<div class="mode">
 			<div class="mode__container">
 				<button class="mode__btn _flag">
@@ -47,10 +55,10 @@
 				</button>
 			</div>
 		</div>
-		<div class="victory-screen popup hidden">
+		<div class="restart-screen popup hidden">
 			<div class="popup__container">
 				<div class="popup__body">
-					<h2 class="popup__title">Victory!</h2>
+					<h2 class="popup__title" data-restart-text="">Victory!</h2>
 					<button class="btn popup__btn" data-restart>Restart</button>
 				</div>
 			</div>
