--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=.6">
 	<meta name="theme-color" content="#1e1e1e">
 	<meta name="description" content="Good old minesweeper.">
 	<title>Minesweeper</title>
@@ -22,40 +22,34 @@
 		</div>
 	</div>
 	<div class="layout">
-		<div class="diff popup hidden">
+		<div class="popup hidden" data-difficulty>
 			<div class="popup__container">
 				<div class="popup__body">
 					<h2 class="popup__title">Select difficulty</h2>
-					<button class="btn popup__btn" data-difficulty="easy">Easy</button>
-					<button class="btn popup__btn" data-difficulty="normal">Normal</button>
-					<button class="btn popup__btn" data-difficulty="hard">Hard</button>
+					<button class="btn popup__btn" data-difficulty-btn="easy">Easy</button>
+					<button class="btn popup__btn" data-difficulty-btn="normal">Normal</button>
+					<button class="btn popup__btn" data-difficulty-btn="hard">Hard</button>
 				</div>
 			</div>
 		</div>
-		<div class="mines-count">
-			<div class="mines-count__container">
-				<div class="mines-count__row">
-					<span class="mines-count__count">0</span>
-					<img src="img/mine.png" alt="mine count">
-				</div>
+		<div class="corner-layout">
+			<div class="corner-layout__row">
+				<span class="corner-layout__count" data-mines-count>0</span>
+				<img src="img/mine.png" alt="mine count">
 			</div>
 		</div>
-		<div class="life">
-			<div class="life__container">
-				<div class="life__row">
-					<span class="life__count" data-life>0</span>
-					<img src="img/life.png" alt="life count">
-				</div>
+		<div class="corner-layout _right">
+			<div class="corner-layout__row">
+				<span class="corner-layout__count" data-life-count>0</span>
+				<img src="img/life.png" alt="life count">
 			</div>
 		</div>
 		<div class="mode">
-			<div class="mode__container">
-				<button class="mode__btn _flag">
-					<div class="mode__img-layout bg _c"></div>
-				</button>
-			</div>
+			<button class="mode__btn _flag">
+				<div class="mode__img-layout bg _c"></div>
+			</button>
 		</div>
-		<div class="restart-screen popup hidden">
+		<div class="popup hidden" data-restart-screen>
 			<div class="popup__container">
 				<div class="popup__body">
 					<h2 class="popup__title" data-restart-text="">Victory!</h2>
